deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-example
spec:
  template:
    spec:
      containers:
      - name: cert-example
        image: quay.io/openshift/origin-hello-openshift:latest
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 100m
            memory: 256Mi
